# NguyenPhuc

./: LICENSE  README.md  package.json  pyproject.toml  server.js
megapip/: cli.py
public/: index.html  main.js  style.css
tests/: test_cli.py
